--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
+    "start": "npm run build && node server.js",
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "express": "^4.16.3",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
